<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">quizdroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_topic_overview">TopicOverview</string>
    <string name="TopicName">Topic</string>
    <string name="TopicDescription">description</string>
    <string name="Questions">questions</string>
    <string name="Begin">Begin</string>
    <string name="title_activity_question_page">QuestionPage</string>
    <string name="Question">question</string>
    <string name="Submit">Submit</string>
    <string name="ResponseOne">Respone One</string>
    <string name="ResponseTwo">Response Two</string>
    <string name="ResponseThree">Response Three</string>
    <string name="ResponseFour">Response Four</string>
    <string name="title_activity_answer_summary">AnswerSummary</string>
    <string name="Next">Next</string>
    <string name="Response">response</string>
    <string name="Answer">Answer</string>
    <string name="TotalRight">Amount Correct</string>
    <string name="LastResponse">Last Response</string>

</resources>
